--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/P-nguyen/todoList2.git"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "react": "^16.4.0",
